<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.single_moview_details.SingleMovie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/txt_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="Connection Problem!!"
            android:visibility="gone"/>

        <ScrollView
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/linearLayout">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:id="@+id/iv_movie_poster"
                    android:layout_gravity="center"
                    android:scaleType="matrix"
                    android:src="@drawable/placeholder"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/tv_movie_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:text="@string/movie_name"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_movie_tagline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sub_title"
                        style="@style/TextAppearance.AppCompat.Small"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_info"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:textStyle="bold"
                        android:layout_marginTop="14dp"/>

                    <LinearLayout
                        android:layout_marginTop="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/release_date"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_release_date"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:text="@string/release_date_value"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_rating"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:text="@string/rating_value"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/runtime"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_runtime"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:text="@string/runtime_value"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/budget"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_budget"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:text="@string/budget_value"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/revenue"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_revenue"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:text="@string/revenue_value"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/overview"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tv_overview"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:text="@string/overview_value"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>